[package]
name = "qmlrs"
version = "0.1.1"
authors = ["Mikko Perttunen <cyndis@kapsi.fi>"]

description = "qmlrs - QtQuick bindings for Rust"
keywords = ["QML", "QtQuick", "Qt", "GUI"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cyndis/qmlrs"
readme = "README.md"

build = "build.rs"

[dependencies]
libc = "^0.2.6"

[build-dependencies]
pkg-config = "^0.3.8"
